# SUPER-SLAM

./: .gitignore  CMakeLists.txt  Dockerfile  et --hard <commit_hash>  super_slam.sh
config/: kitti_2011_09_26_drive_0005.yaml  kitti_2011_09_26_drive_0022.yaml  kitti_2011_09_26_drive_0117.yaml  kitti_2011_09_30_drive_0016.yaml  kitti_2011_09_30_drive_0027.yaml
configs/: kitti_XX.yaml
docs/: README.md
include/vo/: camera.hpp  config.hpp  feature.hpp  feature_tracker.hpp  filter.hpp  frame.hpp  geometry.hpp  kitti_loader.hpp  logger.hpp  map.hpp  optimizer.hpp  pnp_solver.hpp  viz.hpp
modules/frontend/: feature_tracker.cpp  filter.cpp
modules/io/: kitti_loader.cpp
modules/viz/: viz.cpp
src/: camera.cpp  frame.cpp  main.cpp  pnp_solver.cpp
tests/: test_geometry.cpp
utils/: compare_trajectory.py  plot_3d.py
